<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        android:src="@drawable/grocery_logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/spacer"
        android:layout_marginTop="80dp"
        android:visibility="invisible"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcomeText"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/synebold"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="52sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/syneregular"
        android:text="@string/hey_n_let_s_find_a_meal_plan_that_s_right_for_you"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:inputType="textMultiLine|textAutoComplete|textCapSentences"
        android:visibility="invisible"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="20dp"
        android:background="@drawable/squircle"
        android:backgroundTint="@color/white"
        android:padding="12dp" />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor = "@color/white"
        android:backgroundTint="@color/jet"
        android:layout_below="@id/inputEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/loadingImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:src="@drawable/grocery_logo"
        android:animateLayoutChanges="true"
        android:layoutAnimation="@anim/rotate"
        android:contentDescription="@string/progressbar" />
    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loadingImageView"
        android:visibility="gone"/>

</RelativeLayout>
